[build-system]
requires = ["setuptools >= 61.0.0", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "schema_entry"
authors = [
  {name = "hsz", email = "hsz1273327@gmail.com"},
]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12"
]
description = "My package description"
keywords = ["setting-loader","env-loader","commandline-loader","json-schema","validater"]
license = {file = "LICENSE"}
dynamic = ["version", "readme", "dependencies"]
requires-python = "~=3.10"

[project.urls]
changelog = "https://github.com/Python-Tools/schema_entry/CHANGELOG.md"
documentation = "https://github.com/Python-Tools/schema_entry"
homepage = "https://github.com/Python-Tools/schema_entry"
repository = "https://github.com/Python-Tools/schema_entry"

[project.optional-dependencies]
test = ["coverage","mypy", "pycodestyle", "lxml","pydantic"]

[tool.setuptools]
platforms = ["all"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
readme = {file = ["README.md"], content-type = "text/markdown"}
version = {attr = "schema_entry.version.__version__"}

[tool.setuptools.packages.find]
exclude = ['contrib', 'docs', 'tests']