[metadata]
name = entry_tree
version = 0.0.0
description = My package description
long_description = file: README.md, CHANGELOG.md, LICENSE
keywords = config, environment variable, command line arguments, config file
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8

[options]
package_dir=
    =src
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    jsonschema


[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3


[options.packages.find]
where=src